# Neobis_Cinematica

./: pyproject.toml
cinema/cinema/: settings.py  urls.py
cinema/movies/: admin.py  endpoints.py  models.py  serializers.py  urls.py
cinema/movies/migrations/: 0001_initial.py  0002_alter_cinemas_options_alter_movies_options_and_more.py
cinema/orders/: admin.py  endpoints.py  models.py  serializers.py  urls.py
cinema/orders/migrations/: 0001_initial.py
cinema/rooms/: admin.py  endpoints.py  models.py  serializers.py  urls.py
cinema/rooms/migrations/: 0001_initial.py
cinema/users/: admin.py  endpoints.py  models.py  permissions.py  serializers.py  urls.py
cinema/users/migrations/: 0001_initial.py  0002_feedback_clubcard.py  0003_alter_clubcard_user.py
